--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: 2012-07-03 05:24+0000\n"
 "PO-Revision-Date: 2013-04-29 08:35+0000\n"
-"Last-Translator: giftie <roliverosc@hotmail.com>\n"
+"Last-Translator: roliverosc <roliverosc@hotmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/cdART_Manager_XBMC_ADDON/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
